[package]
name = "ekt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.0", features = ["rustls"] }
hex = "0.4.3"
openssl = "0.10.50"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
