[package]
name = "ekt"
version = "0.1.1"
edition = "2021"
authors = ["makemake <vukasin@gostovic.me>"]
license = "GPL-3.0-or-later"
description = "Lightweight tool to generate ethereum keys and addresses."
readme = "README.md"
homepage = "https://github.com/makemake-kbo/ekt"
repository = "https://github.com/makemake-kbo/ekt"
keywords = ["cli", "ethereum", "foundry", "openssl", "ethers"]
categories = ["command-line-utilities"]

[dependencies]
ethers = { version = "2.0.0", features = ["rustls"] }
hex = "0.4.3"
openssl = "0.10.50"
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
